
SUBDIRS = src

sample_v4l2_common_cppflags = \
	$(AM_CPPFLAGS) \
	-Wall -Werror
sample_v4l2_common_cflags = \
	$(AM_CFLAGS)
sample_v4l2_common_cxxflags = \
	$(AM_CXXFLAGS) \
	-std=c++0x
sample_v4l2_common_ldflags = \
	$(AM_LDFLAGS)

export sample_v4l2_common_cppflags
export sample_v4l2_common_cflags
export sample_v4l2_common_cxxflags
export sample_v4l2_common_ldflags
