
SUBDIRS = src

sample_dvb_common_cppflags = \
	$(AM_CPPFLAGS) \
	-Wall -Werror
sample_dvb_common_cflags = \
	$(AM_CFLAGS)
sample_dvb_common_cxxflags = \
	$(AM_CXXFLAGS) \
	-std=c++0x
sample_dvb_common_ldflags = \
	$(AM_LDFLAGS)

export sample_dvb_common_cppflags
export sample_dvb_common_cflags
export sample_dvb_common_cxxflags
export sample_dvb_common_ldflags
